# simple_http_access

./: CMakeLists.txt  README.md
CMake/: FindLibreSSL.cmake
include/: decrypt.h  generator.h  generator_of_decrypt.h  http_request.h  processable_data.h
include/encrypt/: base64.h  encrypt.h  hash.h
include/http/: http_client.h  http_method.h  http_request.h
src/: CMakeLists.txt  main.cpp
src/encrypt/: base64.cpp  encrypt.cpp  hash.cpp
src/http/: http_client.cpp  http_method.cpp
test/: CMakeLists.txt  test_main.cpp
